# trabalho3_edb1

./: CMakeLists.txt  README.md
include/: LevenshteinDistance.hpp  MispelledWord.hpp  PrintCorrections.hpp  ReadFile.hpp  WriteFile.hpp
include/types/: ConsolePrint.hpp  DictData.hpp
src/: MispelledWord.cpp  PrintCorrections.cpp  ReadFile.cpp  WriteFile.cpp  main.cpp
